Addition: Add "NONE" enum to categories
This is intended for transactions where a user is transferring money between their own accounts. It is excluded from random mock transactions.